--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
   "type": "cst-extension",
   "require": {
     "php": ">=7.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "cst\\": ""
+    }
   }
 }
